[project]
name = "RealBasicVSR"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "OrkWard", email = "orkward_o@outlook.com"},
]
dependencies = ["torch==1.7.0", "torchvision==0.8", "torchaudio==0.7", "openmim>=0.3.9", "mmedit>=0.16.1", "psutil>=7.1.2"]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}

[[tool.pdm.source]]
name = "cuda"
url = "https://download.pytorch.org/whl/cu110"
include_packages = ["torch", "torchvision", "torchaudio"]

[[tool.pdm.source]]
name = "pypi"
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.pdm]
distribution = false
